use directx headers

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,6 +58,10 @@ if (NVRHI_WITH_VULKAN)
     add_subdirectory(thirdparty/Vulkan-Headers)
 endif()
 
+if (NVRHI_WITH_DX11 OR NVRHI_WITH_DX12)
+    add_subdirectory(thirdparty/DirectX-Headers)
+endif()
+
 if (NVRHI_WITH_RTXMU)
     if (TARGET Vulkan-Headers)
         get_target_property(RTXMU_VULKAN_INCLUDE_DIR Vulkan-Headers INTERFACE_INCLUDE_DIRECTORIES)
@@ -235,7 +239,7 @@ if (NVRHI_WITH_DX11)
         target_include_directories(${nvrhi_d3d11_target} PRIVATE include)
     endif()
 
-    target_link_libraries(${nvrhi_d3d11_target} d3d11 dxguid)
+    target_link_libraries(${nvrhi_d3d11_target} Microsoft::DirectX-Headers d3d11 dxguid)
 
     if (NVRHI_WITH_NVAPI)
         target_link_libraries(${nvrhi_d3d11_target} nvapi)
@@ -268,7 +272,7 @@ if (NVRHI_WITH_DX12)
         target_link_libraries(${nvrhi_d3d12_target} rtxmu)
     endif()
 
-    target_link_libraries(${nvrhi_d3d12_target} d3d12 dxguid)
+    target_link_libraries(${nvrhi_d3d12_target} Microsoft::DirectX-Headers d3d12 dxguid)
 
     if (NVRHI_WITH_NVAPI)
         target_link_libraries(${nvrhi_d3d12_target} nvapi)
